@startuml
title <size: 30> Roller Blind Actuator v6.1\n<size: 25>Development view level 5 - class diagram

skinparam linetype ortho

note "<b>Only methods related to Roller Blind \n<b>Actuator are represented" as 1

interface Actuator {
    +getActuatorTypeID() : ActuatorTypeIDVO
    +getDeviceID() : DeviceIDVO
    +getActuatorName() : ActuatorNameVO
}

interface AggregateRoot{
    + getID() : DomainID
}

interface DomainID{
    + getID() : String
}

interface ValueObject<T> {
    + getValue() : T
}

class RollerBlindActuator{
    - actuatorID : ActuatorIDVO
    - actuatorName : ActuatorNameVO
    - actuatorTypeID : ActuatorTypeIDVO
    - deviceID : DeviceIDVO

    + RollerBlindActuator(actuatorName : ActuatorNameVO,actuatorTypeID : ActuatorTypeIDVO,deviceID : DeviceIDVO)
    + executeCommand(position : Integer, simHardwareAct : SimHardwareAct ) : boolean
}

class SimHardwareAct {
    + executeIntegerCommandSim(position : Integer) : boolean
}

class ActuatorNameVO{
    - actuatorName : String
    + ActuatorNameVO(actuatorName : String)
    + getValue() : String
}

class ActuatorIDVO{
    - identifier : UUID
    + ActuatorIDVO(identifier : UUID)
}

class ActuatorTypeIDVO{
    - actuatorTypeID : String
    + ActuatorTypeIDVO(actuatorTypeID : String)
}

class DeviceIDVO{
    - deviceID : UUID
    + DeviceIDVO(deviceID : UUID)
}

interface ActuatorExternalService{
    + executeIntegerCommandSim(position : Integer) : boolean
}

Actuator --up|> AggregateRoot
Actuator <|.. RollerBlindActuator
SimHardwareAct <..up RollerBlindActuator
SimHardwareAct ..|> ActuatorExternalService
ActuatorNameVO --o RollerBlindActuator
ActuatorIDVO --o RollerBlindActuator
ActuatorTypeIDVO --o RollerBlindActuator
DeviceIDVO --o RollerBlindActuator
ValueObject <|.. ActuatorNameVO
DomainID <|.. ActuatorIDVO
DomainID <|.. ActuatorTypeIDVO
DomainID <|.. DeviceIDVO

@enduml